# RISC_tools_source

./: canbus_test.sh
ecsd/: ecsd.c  ecsd_func.c  ecsd_func.h  emmc_lifetime.sh
ecsd_1.0/: Makefile.am  Makefile.in  configure  ecsd.c  emmc-life.service  emmc_lifetime.sh
ecsd_yocto4.2/: Makefile.in  config.h.in  configure  ecsd.c
ecsd_yocto4.2/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
imx8_gpio/: Makefile.in  configure  configure.ac
imx8_gpio/src/: Makefile.am  Makefile.in
key_event_2.0/src/: key_event.c
key_event_3.0/src/: key_event.c
key_event_3.1/: Makefile.in  aclocal.m4  configure~
key_event_3.1/src/: Makefile.in  key_event.c
pmic_pwrkey_event/: config.h.in  configure  configure.ac
pmic_pwrkey_event/src/: Makefile.am  Makefile.in  pmic_pwrkey_event.c
rtd_converter/: configure  configure.ac
rtd_converter/src/: Makefile.am  Makefile.in  rtd_converter.c
sandisk/: configure.ac  ecsd.c  ecsd_func.c  ecsd_func.h  emmc_lifetime.sh
wdt_button_test/: Makefile.in  configure  configure.ac
wdt_button_test/src/: Makefile.am  Makefile.in  wdt_button_test.c
